# MocoExtendProblem

./: .gitignore  CMakeLists.old  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MocoActivationSquaredGoal.h  MocoCustomGoal.cpp  MocoCustomGoal.h  PrototypeCustomGoal.cpp  README.md  RegisterTypes_osimMocoActivationSquaredGoal.cpp  build.m  driver.m  extend.cpp  extend.m  extendProblem.cpp  extendProblem.mexw64  extend_problem.m  gaitTracking_tracked_states.sto  output1_00.sto  output1_00_grf.sto  outputcustomTracking_1_00_tracked_states.sto  outputlogging_1_00.txt  plot_results.m  point_mass_solution.sto  pointmass.osim  prototype_acceleration_goal.asv  prototype_customgoal.m  simulation.m  sliding_mass_solution.sto  template.m  test.m  test.osim  testCustomGoal.cpp  test_ExtendProblem.m  test_ExtendProblem_simple.asv  test_ExtendProblem_simple.m
JOSS/: stability.fig
MocoActivationSquaredGoal/: MocoActivationSquaredGoal.cpp  MocoActivationSquaredGoal.h
MocoCoordinateAccelerationGoal/: MocoCoordinateAccelerationGoal.cpp  MocoCoordinateAccelerationGoal.h  osimMocoCoordinateAccelerationGoal.exp
MocoMarkerAccelerationGoal/: MocoMarkerAccelerationGoal.cpp  MocoMarkerAccelerationGoal.h  RegisterTypes_osimMocoMarkerAccelerationGoal.h
MocoMarkerAccelerationMinimizationGoal/: MocoMarkerAccelerationGoal.cpp  MocoMarkerAccelerationGoal.h  RegisterTypes_osimMocoMarkerAccelerationGoal.cpp  RegisterTypes_osimMocoMarkerAccelerationGoal.h
MocoMaxCoordinateGoal/: MocoMaxCoordinateGoal.cpp  MocoMaxCoordinateGoal.h  RegisterTypes_osimMocoMaxCoordinateGoal.cpp  osimMocoMaxCoordinateGoalDLL.h
MocoOutputTrackingGoal/: MocoOutputTrackingGoal.cpp  MocoOutputTrackingGoal.h  RegisterTypes_osimMocoOutputTrackingGoal.cpp  RegisterTypes_osimMocoOutputTrackingGoal.h
MocoWalkingGoal/: MocoWalkingGoal.cpp  MocoWalkingGoal.h  RegisterTypes_osimMocoWalkingGoal.cpp  RegisterTypes_osimMocoWalkingGoal.h  osimMocoWalkingGoalDLL.h
MocoZMPGoal/: MocoZMPGoal.cpp  MocoZMPGoal.h  osimMocoZMPGoal.exp  osimMocoZMPGoalDLL.h
build_docs/: Doxyfile
docs/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _moco_activation_goal_2_moco_activation_goal_8cpp.html  _moco_activation_goal_2_moco_activation_goal_8cpp__incl.dot  _moco_activation_goal_2_moco_activation_goal_8cpp__incl.map  _moco_activation_goal_2_moco_activation_goal_8h.html  _moco_activation_goal_2_moco_activation_goal_8h.js  _moco_activation_goal_2_moco_activation_goal_8h__dep__incl.dot  _moco_activation_goal_2_moco_activation_goal_8h__incl.map  _moco_activation_goal_2_moco_activation_goal_8h_source.html  _moco_activation_goal_2_register_types__osim_moco_activation_goal_8cpp.html  _moco_activation_goal_2_register_types__osim_moco_activation_goal_8cpp.js  _moco_activation_goal_2_register_types__osim_moco_activation_goal_8cpp__incl.md5  _moco_activation_goal_2_register_types__osim_moco_activation_goal_8h.html  _moco_activation_goal_2_register_types__osim_moco_activation_goal_8h.js  _moco_activation_goal_2_register_types__osim_moco_activation_goal_8h__dep__incl.dot  _moco_activation_goal_2_register_types__osim_moco_activation_goal_8h__dep__incl.map  _moco_activation_goal_2_register_types__osim_moco_activation_goal_8h__incl.map  _moco_activation_goal_2_register_types__osim_moco_activation_goal_8h_source.html  _moco_activation_goal_2osim_moco_activation_goal_d_l_l_8h.html  _moco_activation_goal_2osim_moco_activation_goal_d_l_l_8h.js  _moco_activation_goal_2osim_moco_activation_goal_d_l_l_8h__dep__incl.dot  _moco_activation_goal_2osim_moco_activation_goal_d_l_l_8h__dep__incl.map  _moco_activation_goal_2osim_moco_activation_goal_d_l_l_8h_source.html  _moco_activation_squared_goal_2_moco_activation_squared_goal_8cpp.html  _moco_activation_squared_goal_2_moco_activation_squared_goal_8cpp__incl.dot  _moco_activation_squared_goal_2_moco_activation_squared_goal_8cpp__incl.map  _moco_activation_squared_goal_2_moco_activation_squared_goal_8h.html  _moco_activation_squared_goal_2_moco_activation_squared_goal_8h.js  _moco_activation_squared_goal_2_moco_activation_squared_goal_8h__dep__incl.dot  _moco_activation_squared_goal_2_moco_activation_squared_goal_8h__dep__incl.md5  _moco_activation_squared_goal_2_moco_activation_squared_goal_8h_source.html  _moco_activation_squared_goal_2_register_types__osim_moco_activation_squared_goal_8cpp.html  _moco_activation_squared_goal_2_register_types__osim_moco_activation_squared_goal_8cpp.js  _moco_activation_squared_goal_2_register_types__osim_moco_activation_squared_goal_8cpp__incl.md5  _moco_activation_squared_goal_2_register_types__osim_moco_activation_squared_goal_8h.html  _moco_activation_squared_goal_2_register_types__osim_moco_activation_squared_goal_8h.js  _moco_activation_squared_goal_2_register_types__osim_moco_activation_squared_goal_8h__dep__incl.map  _moco_activation_squared_goal_2_register_types__osim_moco_activation_squared_goal_8h__dep__incl.md5  _moco_activation_squared_goal_2_register_types__osim_moco_activation_squared_goal_8h__incl.dot  (+1289 more)
input/: Dennis_StatesReporter_states.sto  hopper_initial_guess.sto
model/: 2D_gait.osim  model_31d84m_modified_contacts.osim
models/: createPointMass.m  hopper.osim  pointmass.osim
output/: 0_00.sto  0_00_grf.sto  best_so_far.sto  best_so_far_GRF.sto  best_so_far_qp.sto  console_logging.txt  gaitTracking_solutionGRF_fullStride.sto  gaitTracking_solution_fullStride.sto  halfstride.sto  humanPredictive_solution.sto  humanPredictive_solution_GRF.sto  humanPredictive_solution_GRF_jr.sto  humanPredictive_solution_jr.sto  humanTracking_jr_solution.sto  humanTracking_jr_solution_GRF.sto  humanTracking_solution.sto  humanTracking_solution_GRF.sto  humanTracking_solution_NoMuscles.sto  humanTracking_solution_NoMuscles_GRF.sto  logging_0_00.txt  sliding_mass_solution.sto
paper/: effort.fig  paper.bib  paper.md
sandbox/: prototype_acceleration_goal.m  prototype_customgoal.m  prototype_max_goal.m  sliding_mass_solution.sto  sliding_mass_solution_NoMax.sto
test/: testCustomGoal.cpp  test_CustomGoal.m  test_ExtendProblem_hopper.m  (+3 more)
utils/: cpp_end.m  (+16 more)
(+1397 files in other folders)
